<resources>

    <!-- MainActivity-->

    <string name="app_name">ScoutingApp2019</string>

    <string name="Settings">&lt;/&gt;</string>

    <string name="Clear"> CLEAR </string>

    <string name="SetupTitle">SETUP</string>

    <string name="SetupDirections">Complete the fields below before the start of each match.</string>

    <string name="ScouterName">Scouter Name:</string>

    <string name="MatchNumber">Match Number:</string>

    <string name="TeamNumber">Team Number:</string>

    <string name="NoShow">No Show</string>

    <string name="AlliancePartners">Alliance Partners</string>

    <string name="AllianceColor">Alliance Color</string>

    <string name="Red">Red</string>

    <string name="Blue">Blue</string>

    <string name="PrepopulatedTitle">PREPOPULATED</string>

    <string name="PrepopulatedDirections">Tap \"PANEL\" or \"CARGO\" to mark which element is in the robot at the start of the match.</string>

    <string name="Panel">Panel</string>

    <string name="Cargo">Cargo</string>

    <string name="StartingPositionTitle">STARTING POSITION</string>

    <string name="StartingPositionDirections">Tap on the platform to mark the robot\'s starting position.</string>

    <string name="StartButtonDirections">DO NOT press the START button until you hear the charge sound!</string>

    <string name="Start">START</string>

    <string name="GenerateQRCode">GENERATE QR CODE</string>


    <!-- Settings -->

    <string name="settings">Settings</string>

    <string name="LeftRightDirections">Which side of the field is blue?</string>

    <string name="Left">Left</string>

    <string name="Right">Right</string>

    <string name="QRProblems">Having QR problems?</string>

    <string name="ResetLocalStorage">.   RESET LOCAL STORAGE   .</string>

    <string name="Save">Save</string>

    <!-- Sandstorm -->

    <string name="zero">0</string>
    <string name="C">C</string>
    <string name="P">P</string>
    <string name="FellOver">Fell Over</string>
    <string name="Possession">POSSESSION</string>
    <string name="Scoring">SCORING</string>
    <string name="PossessionDirections">Tap “PANEL” or “CARGO” any time the robot picks up the corresponding game element.</string>
    <string name="POrCDirections">Tap the “P” or “C” on the diagram to mark where the robot scored their PANEL or CARGO.</string>
    <string name="MissedDirections">Tap the “MISSED” button on the diagram if the robot attempted to score, but was not successful.</string>
    <string name="DroppedDirections">Tap “DROPPED” if the robot drops any game element (game element falls out of the robot).</string>
    <string name="PanelAndCounter">Panel&#32;&#32;&#32;&#32;&#32;&#32;&#32;</string>
    <string name="CargoAndCounter">Cargo&#32;&#32;&#32;&#32;&#32;&#32;&#32;</string>
    <string name="MissedAndCounter">Missed&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;</string>
    <string name="DroppedAndCounter">Dropped&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;</string>
    <string name="T1">T1</string>
    <string name="T2">T2</string>
    <string name="T3">T3</string>
    <string name="HABLine">Crossed HAB Line</string>

    <!-- Top Toggle -->
    <string name="Setup">Setup</string>
    <string name="Sandstorm">Sandstorm</string>
    <string name="Teleop">Teleop</string>
    <string name="Climb">Climb</string>
    <string name="title_activity_sandstorm__left">Sandstorm_Left</string>


</resources>